@@ -1,3 +1,8 @@
+2016-05-18  Daniel Hawkins
+	* common/map.c: Add new maps to the front of the mapstruct linked list
+	  since there does not appear to be any order preference in the rest of
+	  the codebase.
+
 2016-05-17  Daniel Hawkins
 	* common/living.c: Change the depletion message for Con loss to differentiate
 	  it from the permanent stat loss message.
